parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    COMPLEX
    DATA
    DIMENSION
    DOUBLE
    PARAMETER
    PRECISION

Grammar

Rule 0     S' -> start
Rule 1     start -> program_unit_list
Rule 2     program_unit_list -> program_unit program_unit_list
Rule 3     program_unit_list -> program_unit
Rule 4     program_unit -> main_program
Rule 5     program_unit -> subroutine_definition
Rule 6     program_unit -> function_definition
Rule 7     main_program -> PROGRAM ID statement_list END
Rule 8     subroutine_definition -> SUBROUTINE ID LPAREN param_list RPAREN statement_list END
Rule 9     function_definition -> type FUNCTION ID LPAREN param_list RPAREN statement_list END
Rule 10    param_list -> ID COMMA param_list
Rule 11    param_list -> ID
Rule 12    param_list -> empty
Rule 13    statement_list -> statement statement_list
Rule 14    statement_list -> empty
Rule 15    statement -> label_opt declaration
Rule 16    statement -> label_opt assignment
Rule 17    statement -> label_opt print_stmt
Rule 18    statement -> label_opt read_stmt
Rule 19    statement -> label_opt if_stmt
Rule 20    statement -> label_opt do_stmt
Rule 21    statement -> label_opt continue_stmt
Rule 22    statement -> label_opt goto_stmt
Rule 23    statement -> label_opt call_stmt
Rule 24    statement -> label_opt return_stmt
Rule 25    label_opt -> INT_CONST
Rule 26    label_opt -> empty
Rule 27    declaration -> type id_list_decl
Rule 28    type -> INTEGER
Rule 29    type -> REAL
Rule 30    type -> LOGICAL
Rule 31    type -> CHARACTER
Rule 32    id_list_decl -> id_decl COMMA id_list_decl
Rule 33    id_list_decl -> id_decl
Rule 34    id_decl -> ID LPAREN INT_CONST RPAREN
Rule 35    id_decl -> ID
Rule 36    assignment -> ID ASSIGN expr
Rule 37    assignment -> ID LPAREN expr RPAREN ASSIGN expr
Rule 38    print_stmt -> PRINT STAR COMMA print_list
Rule 39    print_list -> expr COMMA print_list
Rule 40    print_list -> expr
Rule 41    read_stmt -> READ STAR COMMA ID
Rule 42    read_stmt -> READ STAR COMMA ID LPAREN expr RPAREN
Rule 43    if_stmt -> IF LPAREN expr RPAREN THEN statement_list ELSE statement_list ENDIF
Rule 44    if_stmt -> IF LPAREN expr RPAREN THEN statement_list ENDIF
Rule 45    do_stmt -> DO INT_CONST ID ASSIGN expr COMMA expr
Rule 46    continue_stmt -> CONTINUE
Rule 47    goto_stmt -> GOTO INT_CONST
Rule 48    call_stmt -> CALL ID LPAREN arg_list RPAREN
Rule 49    return_stmt -> RETURN
Rule 50    expr -> expr PLUS expr
Rule 51    expr -> expr MINUS expr
Rule 52    expr -> expr STAR expr
Rule 53    expr -> expr DIVIDE expr
Rule 54    expr -> expr POW expr
Rule 55    expr -> expr EQ expr
Rule 56    expr -> expr NE expr
Rule 57    expr -> expr GT expr
Rule 58    expr -> expr GE expr
Rule 59    expr -> expr LT expr
Rule 60    expr -> expr LE expr
Rule 61    expr -> expr AND expr
Rule 62    expr -> expr OR expr
Rule 63    expr -> MINUS expr
Rule 64    expr -> NOT expr
Rule 65    expr -> LPAREN expr RPAREN
Rule 66    expr -> ID LPAREN arg_list RPAREN
Rule 67    expr -> MOD LPAREN arg_list RPAREN
Rule 68    expr -> ID
Rule 69    expr -> INT_CONST
Rule 70    expr -> REAL_CONST
Rule 71    expr -> STRING_CONST
Rule 72    expr -> TRUE
Rule 73    expr -> FALSE
Rule 74    arg_list -> expr COMMA arg_list
Rule 75    arg_list -> expr
Rule 76    arg_list -> empty
Rule 77    empty -> <empty>

Terminals, with rules where they appear

AND                  : 61
ASSIGN               : 36 37 45
CALL                 : 48
CHARACTER            : 31
COLON                : 
COMMA                : 10 32 38 39 41 42 45 74
COMPLEX              : 
CONTINUE             : 46
DATA                 : 
DIMENSION            : 
DIVIDE               : 53
DO                   : 45
DOUBLE               : 
ELSE                 : 43
END                  : 7 8 9
ENDIF                : 43 44
EQ                   : 55
FALSE                : 73
FUNCTION             : 9
GE                   : 58
GOTO                 : 47
GT                   : 57
ID                   : 7 8 9 10 11 34 35 36 37 41 42 45 48 66 68
IF                   : 43 44
INTEGER              : 28
INT_CONST            : 25 34 45 47 69
LE                   : 60
LOGICAL              : 30
LPAREN               : 8 9 34 37 42 43 44 48 65 66 67
LT                   : 59
MINUS                : 51 63
MOD                  : 67
NE                   : 56
NOT                  : 64
OR                   : 62
PARAMETER            : 
PLUS                 : 50
POW                  : 54
PRECISION            : 
PRINT                : 38
PROGRAM              : 7
READ                 : 41 42
REAL                 : 29
REAL_CONST           : 70
RETURN               : 49
RPAREN               : 8 9 34 37 42 43 44 48 65 66 67
STAR                 : 38 41 42 52
STRING_CONST         : 71
SUBROUTINE           : 8
THEN                 : 43 44
TRUE                 : 72
error                : 

Nonterminals, with rules where they appear

arg_list             : 48 66 67 74
assignment           : 16
call_stmt            : 23
continue_stmt        : 21
declaration          : 15
do_stmt              : 20
empty                : 12 14 26 76
expr                 : 36 37 37 39 40 42 43 44 45 45 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 64 65 74 75
function_definition  : 6
goto_stmt            : 22
id_decl              : 32 33
id_list_decl         : 27 32
if_stmt              : 19
label_opt            : 15 16 17 18 19 20 21 22 23 24
main_program         : 4
param_list           : 8 9 10
print_list           : 38 39
print_stmt           : 17
program_unit         : 2 3
program_unit_list    : 1 2
read_stmt            : 18
return_stmt          : 24
start                : 0
statement            : 13
statement_list       : 7 8 9 13 43 43 44
subroutine_definition : 5
type                 : 9 27

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . program_unit_list
    (2) program_unit_list -> . program_unit program_unit_list
    (3) program_unit_list -> . program_unit
    (4) program_unit -> . main_program
    (5) program_unit -> . subroutine_definition
    (6) program_unit -> . function_definition
    (7) main_program -> . PROGRAM ID statement_list END
    (8) subroutine_definition -> . SUBROUTINE ID LPAREN param_list RPAREN statement_list END
    (9) function_definition -> . type FUNCTION ID LPAREN param_list RPAREN statement_list END
    (28) type -> . INTEGER
    (29) type -> . REAL
    (30) type -> . LOGICAL
    (31) type -> . CHARACTER

    PROGRAM         shift and go to state 7
    SUBROUTINE      shift and go to state 8
    INTEGER         shift and go to state 10
    REAL            shift and go to state 11
    LOGICAL         shift and go to state 12
    CHARACTER       shift and go to state 13

    start                          shift and go to state 1
    program_unit_list              shift and go to state 2
    program_unit                   shift and go to state 3
    main_program                   shift and go to state 4
    subroutine_definition          shift and go to state 5
    function_definition            shift and go to state 6
    type                           shift and go to state 9

state 1

    (0) S' -> start .



state 2

    (1) start -> program_unit_list .

    $end            reduce using rule 1 (start -> program_unit_list .)


state 3

    (2) program_unit_list -> program_unit . program_unit_list
    (3) program_unit_list -> program_unit .
    (2) program_unit_list -> . program_unit program_unit_list
    (3) program_unit_list -> . program_unit
    (4) program_unit -> . main_program
    (5) program_unit -> . subroutine_definition
    (6) program_unit -> . function_definition
    (7) main_program -> . PROGRAM ID statement_list END
    (8) subroutine_definition -> . SUBROUTINE ID LPAREN param_list RPAREN statement_list END
    (9) function_definition -> . type FUNCTION ID LPAREN param_list RPAREN statement_list END
    (28) type -> . INTEGER
    (29) type -> . REAL
    (30) type -> . LOGICAL
    (31) type -> . CHARACTER

    $end            reduce using rule 3 (program_unit_list -> program_unit .)
    PROGRAM         shift and go to state 7
    SUBROUTINE      shift and go to state 8
    INTEGER         shift and go to state 10
    REAL            shift and go to state 11
    LOGICAL         shift and go to state 12
    CHARACTER       shift and go to state 13

    program_unit                   shift and go to state 3
    program_unit_list              shift and go to state 14
    main_program                   shift and go to state 4
    subroutine_definition          shift and go to state 5
    function_definition            shift and go to state 6
    type                           shift and go to state 9

state 4

    (4) program_unit -> main_program .

    PROGRAM         reduce using rule 4 (program_unit -> main_program .)
    SUBROUTINE      reduce using rule 4 (program_unit -> main_program .)
    INTEGER         reduce using rule 4 (program_unit -> main_program .)
    REAL            reduce using rule 4 (program_unit -> main_program .)
    LOGICAL         reduce using rule 4 (program_unit -> main_program .)
    CHARACTER       reduce using rule 4 (program_unit -> main_program .)
    $end            reduce using rule 4 (program_unit -> main_program .)


state 5

    (5) program_unit -> subroutine_definition .

    PROGRAM         reduce using rule 5 (program_unit -> subroutine_definition .)
    SUBROUTINE      reduce using rule 5 (program_unit -> subroutine_definition .)
    INTEGER         reduce using rule 5 (program_unit -> subroutine_definition .)
    REAL            reduce using rule 5 (program_unit -> subroutine_definition .)
    LOGICAL         reduce using rule 5 (program_unit -> subroutine_definition .)
    CHARACTER       reduce using rule 5 (program_unit -> subroutine_definition .)
    $end            reduce using rule 5 (program_unit -> subroutine_definition .)


state 6

    (6) program_unit -> function_definition .

    PROGRAM         reduce using rule 6 (program_unit -> function_definition .)
    SUBROUTINE      reduce using rule 6 (program_unit -> function_definition .)
    INTEGER         reduce using rule 6 (program_unit -> function_definition .)
    REAL            reduce using rule 6 (program_unit -> function_definition .)
    LOGICAL         reduce using rule 6 (program_unit -> function_definition .)
    CHARACTER       reduce using rule 6 (program_unit -> function_definition .)
    $end            reduce using rule 6 (program_unit -> function_definition .)


state 7

    (7) main_program -> PROGRAM . ID statement_list END

    ID              shift and go to state 15


state 8

    (8) subroutine_definition -> SUBROUTINE . ID LPAREN param_list RPAREN statement_list END

    ID              shift and go to state 16


state 9

    (9) function_definition -> type . FUNCTION ID LPAREN param_list RPAREN statement_list END

    FUNCTION        shift and go to state 17


state 10

    (28) type -> INTEGER .

    FUNCTION        reduce using rule 28 (type -> INTEGER .)
    ID              reduce using rule 28 (type -> INTEGER .)


state 11

    (29) type -> REAL .

    FUNCTION        reduce using rule 29 (type -> REAL .)
    ID              reduce using rule 29 (type -> REAL .)


state 12

    (30) type -> LOGICAL .

    FUNCTION        reduce using rule 30 (type -> LOGICAL .)
    ID              reduce using rule 30 (type -> LOGICAL .)


state 13

    (31) type -> CHARACTER .

    FUNCTION        reduce using rule 31 (type -> CHARACTER .)
    ID              reduce using rule 31 (type -> CHARACTER .)


state 14

    (2) program_unit_list -> program_unit program_unit_list .

    $end            reduce using rule 2 (program_unit_list -> program_unit program_unit_list .)


state 15

    (7) main_program -> PROGRAM ID . statement_list END
    (13) statement_list -> . statement statement_list
    (14) statement_list -> . empty
    (15) statement -> . label_opt declaration
    (16) statement -> . label_opt assignment
    (17) statement -> . label_opt print_stmt
    (18) statement -> . label_opt read_stmt
    (19) statement -> . label_opt if_stmt
    (20) statement -> . label_opt do_stmt
    (21) statement -> . label_opt continue_stmt
    (22) statement -> . label_opt goto_stmt
    (23) statement -> . label_opt call_stmt
    (24) statement -> . label_opt return_stmt
    (77) empty -> .
    (25) label_opt -> . INT_CONST
    (26) label_opt -> . empty

    END             reduce using rule 77 (empty -> .)
    ID              reduce using rule 77 (empty -> .)
    PRINT           reduce using rule 77 (empty -> .)
    READ            reduce using rule 77 (empty -> .)
    IF              reduce using rule 77 (empty -> .)
    DO              reduce using rule 77 (empty -> .)
    CONTINUE        reduce using rule 77 (empty -> .)
    GOTO            reduce using rule 77 (empty -> .)
    CALL            reduce using rule 77 (empty -> .)
    RETURN          reduce using rule 77 (empty -> .)
    INTEGER         reduce using rule 77 (empty -> .)
    REAL            reduce using rule 77 (empty -> .)
    LOGICAL         reduce using rule 77 (empty -> .)
    CHARACTER       reduce using rule 77 (empty -> .)
    INT_CONST       shift and go to state 22

    statement_list                 shift and go to state 18
    statement                      shift and go to state 19
    empty                          shift and go to state 20
    label_opt                      shift and go to state 21

state 16

    (8) subroutine_definition -> SUBROUTINE ID . LPAREN param_list RPAREN statement_list END

    LPAREN          shift and go to state 23


state 17

    (9) function_definition -> type FUNCTION . ID LPAREN param_list RPAREN statement_list END

    ID              shift and go to state 24


state 18

    (7) main_program -> PROGRAM ID statement_list . END

    END             shift and go to state 25


state 19

    (13) statement_list -> statement . statement_list
    (13) statement_list -> . statement statement_list
    (14) statement_list -> . empty
    (15) statement -> . label_opt declaration
    (16) statement -> . label_opt assignment
    (17) statement -> . label_opt print_stmt
    (18) statement -> . label_opt read_stmt
    (19) statement -> . label_opt if_stmt
    (20) statement -> . label_opt do_stmt
    (21) statement -> . label_opt continue_stmt
    (22) statement -> . label_opt goto_stmt
    (23) statement -> . label_opt call_stmt
    (24) statement -> . label_opt return_stmt
    (77) empty -> .
    (25) label_opt -> . INT_CONST
    (26) label_opt -> . empty

    END             reduce using rule 77 (empty -> .)
    ELSE            reduce using rule 77 (empty -> .)
    ENDIF           reduce using rule 77 (empty -> .)
    ID              reduce using rule 77 (empty -> .)
    PRINT           reduce using rule 77 (empty -> .)
    READ            reduce using rule 77 (empty -> .)
    IF              reduce using rule 77 (empty -> .)
    DO              reduce using rule 77 (empty -> .)
    CONTINUE        reduce using rule 77 (empty -> .)
    GOTO            reduce using rule 77 (empty -> .)
    CALL            reduce using rule 77 (empty -> .)
    RETURN          reduce using rule 77 (empty -> .)
    INTEGER         reduce using rule 77 (empty -> .)
    REAL            reduce using rule 77 (empty -> .)
    LOGICAL         reduce using rule 77 (empty -> .)
    CHARACTER       reduce using rule 77 (empty -> .)
    INT_CONST       shift and go to state 22

    statement                      shift and go to state 19
    statement_list                 shift and go to state 26
    empty                          shift and go to state 20
    label_opt                      shift and go to state 21

state 20

    (14) statement_list -> empty .
    (26) label_opt -> empty .

    END             reduce using rule 14 (statement_list -> empty .)
    ELSE            reduce using rule 14 (statement_list -> empty .)
    ENDIF           reduce using rule 14 (statement_list -> empty .)
    ID              reduce using rule 26 (label_opt -> empty .)
    PRINT           reduce using rule 26 (label_opt -> empty .)
    READ            reduce using rule 26 (label_opt -> empty .)
    IF              reduce using rule 26 (label_opt -> empty .)
    DO              reduce using rule 26 (label_opt -> empty .)
    CONTINUE        reduce using rule 26 (label_opt -> empty .)
    GOTO            reduce using rule 26 (label_opt -> empty .)
    CALL            reduce using rule 26 (label_opt -> empty .)
    RETURN          reduce using rule 26 (label_opt -> empty .)
    INTEGER         reduce using rule 26 (label_opt -> empty .)
    REAL            reduce using rule 26 (label_opt -> empty .)
    LOGICAL         reduce using rule 26 (label_opt -> empty .)
    CHARACTER       reduce using rule 26 (label_opt -> empty .)


state 21

    (15) statement -> label_opt . declaration
    (16) statement -> label_opt . assignment
    (17) statement -> label_opt . print_stmt
    (18) statement -> label_opt . read_stmt
    (19) statement -> label_opt . if_stmt
    (20) statement -> label_opt . do_stmt
    (21) statement -> label_opt . continue_stmt
    (22) statement -> label_opt . goto_stmt
    (23) statement -> label_opt . call_stmt
    (24) statement -> label_opt . return_stmt
    (27) declaration -> . type id_list_decl
    (36) assignment -> . ID ASSIGN expr
    (37) assignment -> . ID LPAREN expr RPAREN ASSIGN expr
    (38) print_stmt -> . PRINT STAR COMMA print_list
    (41) read_stmt -> . READ STAR COMMA ID
    (42) read_stmt -> . READ STAR COMMA ID LPAREN expr RPAREN
    (43) if_stmt -> . IF LPAREN expr RPAREN THEN statement_list ELSE statement_list ENDIF
    (44) if_stmt -> . IF LPAREN expr RPAREN THEN statement_list ENDIF
    (45) do_stmt -> . DO INT_CONST ID ASSIGN expr COMMA expr
    (46) continue_stmt -> . CONTINUE
    (47) goto_stmt -> . GOTO INT_CONST
    (48) call_stmt -> . CALL ID LPAREN arg_list RPAREN
    (49) return_stmt -> . RETURN
    (28) type -> . INTEGER
    (29) type -> . REAL
    (30) type -> . LOGICAL
    (31) type -> . CHARACTER

    ID              shift and go to state 38
    PRINT           shift and go to state 39
    READ            shift and go to state 40
    IF              shift and go to state 41
    DO              shift and go to state 42
    CONTINUE        shift and go to state 43
    GOTO            shift and go to state 44
    CALL            shift and go to state 45
    RETURN          shift and go to state 46
    INTEGER         shift and go to state 10
    REAL            shift and go to state 11
    LOGICAL         shift and go to state 12
    CHARACTER       shift and go to state 13

    declaration                    shift and go to state 27
    assignment                     shift and go to state 28
    print_stmt                     shift and go to state 29
    read_stmt                      shift and go to state 30
    if_stmt                        shift and go to state 31
    do_stmt                        shift and go to state 32
    continue_stmt                  shift and go to state 33
    goto_stmt                      shift and go to state 34
    call_stmt                      shift and go to state 35
    return_stmt                    shift and go to state 36
    type                           shift and go to state 37

state 22

    (25) label_opt -> INT_CONST .

    ID              reduce using rule 25 (label_opt -> INT_CONST .)
    PRINT           reduce using rule 25 (label_opt -> INT_CONST .)
    READ            reduce using rule 25 (label_opt -> INT_CONST .)
    IF              reduce using rule 25 (label_opt -> INT_CONST .)
    DO              reduce using rule 25 (label_opt -> INT_CONST .)
    CONTINUE        reduce using rule 25 (label_opt -> INT_CONST .)
    GOTO            reduce using rule 25 (label_opt -> INT_CONST .)
    CALL            reduce using rule 25 (label_opt -> INT_CONST .)
    RETURN          reduce using rule 25 (label_opt -> INT_CONST .)
    INTEGER         reduce using rule 25 (label_opt -> INT_CONST .)
    REAL            reduce using rule 25 (label_opt -> INT_CONST .)
    LOGICAL         reduce using rule 25 (label_opt -> INT_CONST .)
    CHARACTER       reduce using rule 25 (label_opt -> INT_CONST .)


state 23

    (8) subroutine_definition -> SUBROUTINE ID LPAREN . param_list RPAREN statement_list END
    (10) param_list -> . ID COMMA param_list
    (11) param_list -> . ID
    (12) param_list -> . empty
    (77) empty -> .

    ID              shift and go to state 47
    RPAREN          reduce using rule 77 (empty -> .)

    param_list                     shift and go to state 48
    empty                          shift and go to state 49

state 24

    (9) function_definition -> type FUNCTION ID . LPAREN param_list RPAREN statement_list END

    LPAREN          shift and go to state 50


state 25

    (7) main_program -> PROGRAM ID statement_list END .

    PROGRAM         reduce using rule 7 (main_program -> PROGRAM ID statement_list END .)
    SUBROUTINE      reduce using rule 7 (main_program -> PROGRAM ID statement_list END .)
    INTEGER         reduce using rule 7 (main_program -> PROGRAM ID statement_list END .)
    REAL            reduce using rule 7 (main_program -> PROGRAM ID statement_list END .)
    LOGICAL         reduce using rule 7 (main_program -> PROGRAM ID statement_list END .)
    CHARACTER       reduce using rule 7 (main_program -> PROGRAM ID statement_list END .)
    $end            reduce using rule 7 (main_program -> PROGRAM ID statement_list END .)


state 26

    (13) statement_list -> statement statement_list .

    END             reduce using rule 13 (statement_list -> statement statement_list .)
    ELSE            reduce using rule 13 (statement_list -> statement statement_list .)
    ENDIF           reduce using rule 13 (statement_list -> statement statement_list .)


state 27

    (15) statement -> label_opt declaration .
